# PPSN2024-EDO-scheduling

./: .gitignore  CMakeLists.txt  README.md  algorithmus.py  build_run.sh  components.py  lcs.py  main.py  problem.py  schedule.py  scheduling.py  string_alg.py  visualization.py
experimental_data/: test_mu1_constrained.txta02.txt  test_mu1_constrained.txta05.txt  test_mu1_constrained.txta1.txt  test_mu1_unconstrained.txt
experiments/data/: component_times.csv  data_mu1-const.csv  data_mu1-unconst.csv  data_survivor-opt.csv  output_mu1-const.csv  output_mu1-unconst.csv  output_noah.csv  test_mu1_constrained.csv  test_mu1_unconstrained.csv
experiments/scripts/: AnalyzeData.py  CreateTable.py  DatapointInformation.py
experiments/scripts_analysis/: AnalyzeData.py  AnalyzeDataDiversity.py  AnalyzeDataRobustness.py  CalculateRuntimes.py  CombinationCalculation.py  ConcatFiles.py  CreateTable.py  DatapointInformation.py  RobustnessFilter.py  SummarizeTrajectory.py  requirements.txt
experiments/scripts_hpc/: build_run.sh  job_template.sh  start_experiment.sh  start_experiments.sh
old/: CMakeLists.txt  main.cpp
src/: main.cpp
src/algorithms/: mu1.hpp  noah.hpp  printing.hpp  simple.hpp  simple_test.hpp
src/operators/: operators_diversity.hpp  operators_evaluation.hpp  operators_initialization.hpp  operators_mutation.hpp  operators_parentSelection.hpp  operators_recombination.hpp  operators_survivorSelection.hpp  operators_termination.hpp
src/population/: population.cpp  population.hpp  population_mu1.hpp  population_noah.hpp
src/utility/: documenting.hpp  (+5 more)
(+15 files in other folders)
